crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_pr_review_group_header.snap
---
source: crates/tui/src/ui/mod.rs
assertion_line: 478
expression: content
---
╭ WORKSPACES │ PROJECTS ───────────────╮
│▎▾ pr-review                          │
│   ◎ owner/repo#1 [PR]                │
│   ◎ owner/repo#2 [PR]                │
│                                      │
│   ⎇ plain-ws                         │
│                                      │
╰──────────────────────────────────────╯
