crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_simple_non_git_shows_folder_icon.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ PROJECTS ────────────────────────────╮
│▎  🗁 scratch-notes                    │
│                                      │
│                                      │
│                                      │
╰──────────────────────────────────────╯
