crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_single_line_rows.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ PROJECTS ────────────────────────────╮
│ ▾ ● no project 3                     │
│▎ ▾ ⎇ src-nightly                     │
│  │ ⎇ nightly 2∆ ↑1 ↓2                │
│  ▾ ⎇ src-void-setup                  │
│  │ ⎇ void-setup                      │
│  ▾ ⎇ src-x220t                       │
│  │ ⎇ x220t                           │
│                                      │
╰──────────────────────────────────────╯
