crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_standalone_simple_shows_folder_and_branch.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ PROJECTS ────────────────────────────╮
│▎▾ ● no project 1                     │
│  ▾ ⎇ my-project-folder               │
│  │ ○ main                            │
│                                      │
╰──────────────────────────────────────╯
