crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_list_standalone_simple_shows_folder_name.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---
╭ WORKSPACES ──────────────────────────╮
│▎  ○ my-project-folder                │
│                                      │
│                                      │
│                                      │
╰──────────────────────────────────────╯
