crates/tui/src/ui/snapshots/piki_multi_ai__ui__tests__workspace_switcher_tree.snap
---
source: crates/tui/src/ui/mod.rs
expression: content
---


      ╭───────────────────────────────────────────────────────╮
      │ / switch checkout                                   2 │
      │ ◆ ○ piki-nightly (2)                                  │
      │    ├─ → — Shell                                 shell │
      │    ├─   — Claude                 claude · not started │
      │   ○ bob-the-builder (1)                               │
      │    ├─ → — Claude                 claude · not started │
      │                                                       │
      │ piki-nightly                                          │
      │ enter switch  ^p/^n move  type search  esc close      │
      ╰───────────────────────────────────────────────────────╯
